--- a/HTML/formulario.html
+++ b/HTML/formulario.html
@@ -10,6 +10,7 @@
         <h1>Nombre Apellido</h1>
         <img src="cv.png" alt="Foto de CV" width="150">
     </header>
+    <link rel="stylesheet" href="estilos.css">
 
     <section>
         <h2>Edad</h2>
