--- a/SitioX/index.html
+++ b/SitioX/index.html
@@ -39,6 +39,48 @@
             </div>
         </div>
     </div>
+    <div class="container testimonios">
+        <h2>Testimonios</h2>
+        <div id="carouselTestimonios" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <p>"Excelente servicio y cervezas de calidad."</p>
+                    <small>- Cliente Satisfecho</small>
+                </div>
+                <div class="carousel-item">
+                    <p>"Un lugar acogedor con una gran variedad de cervezas."</p>
+                    <small>- Amante de la Cerveza</small>
+                </div>
+                <!-- Más testimonios -->
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselTestimonios" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Anterior</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselTestimonios" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Siguiente</span>
+            </button>
+        </div>
+    </div>
+    <div class="container contacto">
+        <h2>Contacto</h2>
+        <form>
+            <div class="mb-3">
+                <label for="nombre" class="form-label">Nombre</label>
+                <input type="text" class="form-control" id="nombre" required>
+            </div>
+            <div class="mb-3">
+                <label for="email" class="form-label">Email</label>
+                <input type="email" class="form-control" id="email" required>
+            </div>
+            <div class="mb-3">
+                <label for="mensaje" class="form-label">Mensaje</label>
+                <textarea class="form-control" id="mensaje" rows="3" required></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Enviar</button>
+        </form>
+    </div>    
 </head>
 <body>
     <!-- Contenido del sitio -->
